--- a/ProyectoIHER/Web.config
+++ b/ProyectoIHER/Web.config
@@ -11,7 +11,9 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ProyectoIHER-20200213021955.mdf;Initial Catalog=aspnet-ProyectoIHER-20200213021955;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=GERARDO\SQLEXPRESS;Initial Catalog=IHERBD;Integrated Security=true;"
+      providerName="System.Data.SqlClient" />
+    <add name="ProyectoIHERContext" connectionString="Data Source=GERARDO\SQLEXPRESS; Initial Catalog=IHERBD; Integrated Security=true;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
