--- a/ProyectoIHER/Web.config
+++ b/ProyectoIHER/Web.config
@@ -11,9 +11,9 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=GERARDO\SQLEXPRESS;Initial Catalog=IHERBD;Integrated Security=true;"
+    <add name="DefaultConnection" connectionString="Data Source=SANTOS_PC\SQLIHER;Initial Catalog=IHERBD;Integrated Security=true;"
       providerName="System.Data.SqlClient" />
-    <add name="ProyectoIHERContext" connectionString="Data Source=GERARDO\SQLEXPRESS; Initial Catalog=IHERBD; Integrated Security=true;"
+    <add name="ProyectoIHERContext" connectionString="Data Source=SANTOS_PC\SQLIHER; Initial Catalog=IHERBD; Integrated Security=true;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
