--- a/ProyectoIHER/ProyectoIHER.csproj
+++ b/ProyectoIHER/ProyectoIHER.csproj
@@ -215,6 +215,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Imagenes\EdificioIHER.jpg" />
+    <Content Include="Imagenes\logo.png" />
+    <Content Include="Imagenes\logo3.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
