--- a/ProyectoIHER/ProyectoIHER.csproj
+++ b/ProyectoIHER/ProyectoIHER.csproj
@@ -218,6 +218,7 @@
     <Content Include="Imagenes\EdificioIHER.jpg" />
     <Content Include="Imagenes\logo.png" />
     <Content Include="Imagenes\logo3.png" />
+    <Content Include="Imagenes\Usuario Bloqueado.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
