--- a/ProyectoIHER/ProyectoIHER.csproj
+++ b/ProyectoIHER/ProyectoIHER.csproj
@@ -192,6 +192,18 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202002251634292_TablaUsuario.cs" />
+    <Compile Include="Migrations\202002251634292_TablaUsuario.Designer.cs">
+      <DependentUpon>202002251634292_TablaUsuario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202002251647193_Address.cs" />
+    <Compile Include="Migrations\202002251647193_Address.Designer.cs">
+      <DependentUpon>202002251647193_Address.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202002251652266_Fullname.cs" />
+    <Compile Include="Migrations\202002251652266_Fullname.Designer.cs">
+      <DependentUpon>202002251652266_Fullname.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Cliente.cs" />
@@ -319,6 +331,17 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202002251634292_TablaUsuario.resx">
+      <DependentUpon>202002251634292_TablaUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002251647193_Address.resx">
+      <DependentUpon>202002251647193_Address.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002251652266_Fullname.resx">
+      <DependentUpon>202002251652266_Fullname.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
