--- a/ProyectoIHER/ProyectoIHER.csproj
+++ b/ProyectoIHER/ProyectoIHER.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Models\Proveedores.cs" />
     <Compile Include="Models\ProyectoIHERContext.cs" />
     <Compile Include="Models\Rol.cs" />
+    <Compile Include="Models\RolesList.cs" />
     <Compile Include="ModelViews\RoleView.cs" />
     <Compile Include="ModelViews\UserView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
